2008-01-08  Sancho Lerena  <slerena@gmail.com>

        * pandoradb_data.sql: Added keep_alive as module id 100 for the new keepalive
        management. Old way (from 1.2) is now deprecated and not used.

        * operation/agentes/estado_agente.php: Style changes, not code.

        * images/mod_keepalive.png: Added new icon for keepalive moduletype.

        * godmode/agentes/configurar_agente.php: Create an agent creates automatically 
        a keepalive module AND a tagente_estado record.

2007-12-16  Sancho Lerena <slerena@gmail.com>

	* pandoradb.sql: New field for tagente_modulo: disabled, to be
	able to disable individual modules on an agent.

	* index.php: Version number is now officially "1.4dev". There is
	a long way to finish 1.4.

	* operation/servers/view_server_detail.php: FIX. If no tasks, show
	a little message.

	* images/console/icons/smalldot*: New small graph for graph console.

	* reporting/fgraph.php: FIX. Combined graphs with components of scale =1
	does not readjust automatically.

2007-12-16  Raul Mateos <raulofpandora@gmail.com>

	* include/languages/language_en.php, language_es_es.php, language_fr.php,
	language_de.php, language_pt_br.php: Updated strings.

	* pandoradb_data.sql: Updated to insert updated languages.

	* index.php, include/config_inc.php: Updated version and build number.
	
2007-12-14  Sancho Lerena <slerena@gmail.com>

	* pandoradb.sql: BUG FIXED, generic_data_inc data don't work with 
	small float data. Need to alter tagente_datos_inc table for field 
	"datos.

2007-11-19  Sancho Lerena <slerena@gmail.com>

	* index.php: Included patch summited by Guru Evi (guruevi) for HTTPS support. THanks evi ! :)

2007-10-14  Raul Mateos <raulofpandora@gmail.com>

	* godmode/modules/manage_network_components.php: Added deleted table row.
	
	* include/languages/*.php: Removed duplicated lines. Updated some
	languages.

2007-10-13  Raul Mateos <raulofpandora@gmail.com>

	* styles/op.css, god.css, link.css: Simplify styles.
